# Projeto_fast_api

./: pyproject.toml
projeto_fast_api/: app.py
tests/: test_app.py
